--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Specifying Color with RGBa, HSLa, Hexadecimal, and CSS Filters</title>
-	<link href="css/normalize.css" rel="stylesheet">
-	<link href="css/base.css" rel="stylesheet">
+	<link href="normalize.css" rel="stylesheet">
+	<link href="base.css" rel="stylesheet">
 	<style>
 /* STEP 1: Using the color picker utility at
 https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Colors/Color_picker_tool,
